--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
+
+body{
+  background-color: aliceblue;
+}
+
+
+
+
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+}
+.title{
+  margin: 30px;
+  text-align: center;
+  font-family: cursive;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.tabs{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1000px;
+  height: 234px;
+  background-color: rgb(255, 255, 255);
+
+}
+.tabs-title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 30%;
+  max-height:100%;
+  z-index: 1;
+
+}
+
+.tabs-content{
+  
+width: 70%;
+height: 200px;
+
+
+
+}
+
+.tab{
+  width: 100%;
+  padding: 1.5rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+  border: 1px solid rgb(195, 195, 195);
+  border-left: 3px solid orangered;
+  background: #d9d8d4;
+  cursor: pointer;
+}
+
+.active-tab{
+  background-color: purple;
+  border-left: purple;
+  color: #fff;
+  position: relative;
+}
+
+.active-tab::after{
+  content: "";
+  position: absolute;
+  top: 15px;
+  right: -5px;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: purple;
+  transform: rotate(45deg);
+}
+
+.content{
+  display: none;
+}
+
+.active-content{
+  display: block;
+  animation: slide-right 0.5s ease 1;
+}
+
+@keyframes slide-right {
+  0%{
+    transform: translateX(-10rem);
   }
-  to {
-    transform: rotate(360deg);
+  100%{
+    transform: translateX(0);
   }
 }
